# mcp-vulscanner

./: .gitignore  CI_recovery_notes.md  Makefile  README.md  pyproject.toml  setup_ci_test_assets.sh
.github/workflows/: ci.yml
data/corpus/: ground-truth.json
data/fixtures/dynamic/: cader_http_server.py  cader_stdio_server.py  http_redirect_ssrf_server.py  stdio_guarded_server.py  stdio_vulnerable_server.py
data/fixtures/eval/: sample-results.json
docs/: corpus-notes.md  evaluation-plan.md
paper/: outline.md  related-work.md
repo_seed 2/: setup_ci_test_assets.sh
repo_seed 2/data/corpus/: targets.json
reports/self-audit/: deep-scan.json  deep-scan.md  quick-scan.json  quick-scan.md
results/: aggregate-results.json
results/raw/: neg-atlassian-clean.json  neg-fetch-clean.json  neg-hackmd-clean.json  neg-k8s-clean.json  pos-azure-ssrf.json  pos-create-stdio-cmd.json  pos-fetch-ssrf.json  pos-figma-write.json  pos-hackmd-write.json  pos-k8s-rbac.json
results/reports/: neg-atlassian-clean.md  neg-fetch-clean.md  neg-hackmd-clean.md  neg-k8s-clean.md  pos-azure-ssrf.md  pos-create-stdio-cmd.md  pos-fetch-ssrf.md  pos-figma-write.md  pos-hackmd-write.md  pos-k8s-rbac.md
results/reports/neg-hackmd-clean/: execution-trace.json  replay-report.md
src/mcp_vulscanner/: __init__.py  __main__.py  cli.py
tests/: test_advisory_corpus.py  test_cader_mcp.py  test_cli.py  test_dynamic_http_replay.py  test_dynamic_replay.py  test_eval_corpus.py  test_eval_run.py  test_eval_stdio_replay.py  test_eval_tables.py  test_self_audit.py  test_static_analysis.py
(+42 files in other folders)
