[project]
name = "mcp-vulscanner"
version = "0.1.0"
description = "Research scaffold for MCP vulnerability scanning experiments."
readme = "README.md"
authors = [
    { name = "zhen", email = "suzan5@naver.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mcp-vulscanner = "mcp_vulscanner:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true
